--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "code:check": "npx prettier --loglevel=warn --check . && npx eslint . && echo 'Check Complete.'",
+    "code:fix": "npx prettier --loglevel=warn --write . && npx eslint . --fix && echo 'Fix Complete.'"
   },
   "eslintConfig": {
     "extends": [
