--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,4 @@
-name: lint-and-test
+name: lint
 
 on:
   push:
@@ -12,14 +12,9 @@ on:
       - synchronize
 
 jobs:
-  lint-and-test:
+  lint:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: npm ci
-        run: npm ci
       - name: lint
         run: npm run lint
