--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "serve -s build",
+    "start": "node server.js",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -12,7 +12,7 @@
     "lint:fix": "npx prettier --ignore-path=.gitignore --loglevel=warn --write . && npx eslint --ignore-path=.gitignore . --fix && echo 'Fix Complete.'"
   },
   "dependencies": {
-    "serve": "^14.0.1"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.2",
